forth/test/fail/test_dot_call_define_leading_dot.af
\ Must fail to compile.
fun: .bad_dot_name { -- err } end
